commit on 'master'

--- a/Daily Code Log/D18/index.html
+++ b/Daily Code Log/D18/index.html
@@ -24,7 +24,12 @@
     <script>
       function changeBackground(color) {
         document.body.style.background = color;
-        event.target.classList.add("mystyle");
+
+        if ((color = event.target.style.backgroundColor)) {
+          event.target.classList.add("mystyle");
+        } else {
+          event.target.classList.remove("mystyle");
+        }
       }
       function change(color) {
         document
