commit on 'master'

--- a/Daily Code Log/D19/index.html
+++ b/Daily Code Log/D19/index.html
@@ -48,6 +48,12 @@
     <script>
       function changeBackground(color) {
         document.body.style.background = color;
+
+        console.log(color);
+
+        //       if (color == ) {
+        //       event.target.classList.add("mystyle");
+        //   }
       }
       function change(color) {
         document
